--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethan's React Typescript Webpack Template</title>
+  <!-- <link rel="icon" href="../public/favicon.ico" type="image/x-icon" /> -->
+  <title>Gracie's Eats</title>
 </head>
 <body>
   <div id="root"></div>
